--- a/pingpong/media/core.css
+++ b/pingpong/media/core.css
@@ -78,7 +78,7 @@ td { vertical-align: top; }
 .core_text_med { font-size: 90%; font-weight: normal; }
 .core_the_rest { position: relative; float: left; min-width: 300px; width: 100%; cursor: pointer; margin: 19px 35px 0 0; padding: 4px 8px 7px 8px; font-size: 22px; text-shadow: 2px 2px 3px #141414; color: #DDD; border-bottom: 3px solid #181818; border-right: 3px solid #181818; border-top: 3px solid #2D2D2D; border-left: 3px solid #2D2D2D; height: 59px; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#282828), to(#1B1B1B)); background-image: -moz-linear-gradient(0% 100% 90deg,#1B1B1B, #282828); -moz-border-radius:8px; border-radius:8px; -webkit-border-radius:8px; cu }
 .core_the_rest .core_last { margin-top: 7px; position: absolute; right: 80px; }
-.core_the_rest .name { float: left; margin: 23px 0 0 0; overflow: hidden; width: 210px; }
+.core_the_rest .name { float: left; margin: 23px 0 0 0; padding-bottom: 8px; overflow: hidden; width: 210px; }
 .core_the_rest .points { float: right; font-weight: bold; margin: 21px 23px 0 0; }
 .core_the_rest .rank { width: 30px; float: left; margin: 21px 0 0 23px; }
 .core_the_rest td { width: 33%; }
